basic header, footer and main-section started with ids to all of them

--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>TEST</h1>
-    
+    <!--Start of header-->
+    <header class="header">
+
+    </header>
+    <!--Start of main-->
+    <main class="main">
+
+    </main>
+<!--Start of footer-->
+    <footer class="footer">
+
+    </footer>
 </body>
 </html>
