accidently created classes - should have created ids. Fixed now

--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interior Design</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
     <!--Start of header-->
-    <header class="header">
+    <header id="header">
 
     </header>
     <!--Start of main-->
-    <main class="main">
+    <main id="main">
 
     </main>
 <!--Start of footer-->
-    <footer class="footer">
+    <footer id="footer">
 
     </footer>
 </body>
