--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interior Design</title>
+    <title>Interior Design Art</title>
     <link rel="stylesheet" href="assets/css/style.css" />
+
 </head>
 <body>
     <!--Start of header-->
     <header id="header">
-
+        <a href="index.html">
+            <h1 id="logo">ID ART</h1>
+        </a>
+        <nav>
+            <ul id="menu">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="gallery.html">References</a></li>
+                <li><a href="signup.html">Contact Us</a></li>
+            </ul>
+        </nav>
     </header>
     <!--Start of main-->
     <main id="main">
