styling added to the header nav and h1 element and font awesome script added to body

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <nav>
             <ul id="menu">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="gallery.html">References</a></li>
-                <li><a href="signup.html">Contact Us</a></li>
+                <li><a href="references.html">References</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -30,5 +30,6 @@
     <footer id="footer">
 
     </footer>
+        <script src="https://kit.fontawesome.com/8c7644c471.js" crossorigin="anonymous"></script>
 </body>
 </html>
