two more html files created - references and contact.Social link icons in footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--Start of header-->
     <header id="header">
-        <a href="index.html">
+        <a id="anchor-logo" href="index.html">
             <h1 id="logo">ID ART</h1>
         </a>
         <nav>
@@ -28,7 +28,20 @@
     </main>
 <!--Start of footer-->
     <footer id="footer">
-
+<ul id="social-links">
+    <li>
+        <a href="https://facebook.com/" target="_blank" rel="noopener"
+            aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+    </li>
+    <li>
+        <a href="https://instagram.com/" target="_blank" rel="noopener"
+            aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+    </li>
+    <li>
+        <a href="https://youtube.com/" target="_blank" rel="noopener"
+            aria-label="Visit our Youtube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+    </li>
+</ul>
     </footer>
         <script src="https://kit.fontawesome.com/8c7644c471.js" crossorigin="anonymous"></script>
 </body>
