navbar made into toggle on smartphones

--- a/index.html
+++ b/index.html
@@ -1,48 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interior Design Art</title>
     <link rel="stylesheet" href="assets/css/style.css" />
-
-</head>
-<body>
+  </head>
+  <body>
     <!--Start of header-->
     <header id="header">
-        <a id="anchor-logo" href="index.html">
-            <h1 id="logo">ID ART</h1>
-        </a>
-        <nav>
-            <ul id="menu">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="references.html">References</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
+      <a id="anchor-logo" href="index.html">
+        <h1 id="logo">ID ART</h1>
+      </a>
+      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
+      <label for="nav-toggle" class="nav-toggle-label"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
+      <nav>
+        <ul id="menu">
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="references.html">References</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+      </nav>
     </header>
     <!--Start of main-->
     <main id="main">
-
+        <div id="picture1"><h1 id="main-title">Interior Design Art</h1></div>
     </main>
-<!--Start of footer-->
+    <!--Start of footer-->
     <footer id="footer">
-<ul id="social-links">
-    <li>
-        <a href="https://facebook.com/" target="_blank" rel="noopener"
-            aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
-    </li>
-    <li>
-        <a href="https://instagram.com/" target="_blank" rel="noopener"
-            aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
-    </li>
-    <li>
-        <a href="https://youtube.com/" target="_blank" rel="noopener"
-            aria-label="Visit our Youtube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
-    </li>
-</ul>
+      <ul id="social-links">
+        <li>
+          <a
+            href="https://facebook.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Facebook page (opens in a new tab)"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://instagram.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Instagram page (opens in a new tab)"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://youtube.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Youtube channel (opens in a new tab)"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+        </li>
+      </ul>
     </footer>
-        <script src="https://kit.fontawesome.com/8c7644c471.js" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://kit.fontawesome.com/8c7644c471.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
