--- a/references.html
+++ b/references.html
@@ -15,7 +15,7 @@
         <h1 id="logo">ID ART</h1>
       </a>
     <input type="checkbox" id="nav-toggle" name="nav-toggle" />
-    <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+    <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-ellipsis-vertical"></i></label>
       <nav>
         <ul id="menu">
           <li><a href="index.html">Home</a></li>
