--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,6 @@
     <title>Interior Design Art</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-
   <body>
     <!--Start of header-->
     <header id="header">
@@ -26,7 +25,19 @@
       </nav>
     </header>
     <!--Start of main-->
-    <main id="main"></main>
+    <main id="main">
+        <section ID="main-contact-section"></section>
+          <section>
+            <h1>Contact Us</h1>
+          </section>
+          <section id="googlemaps">
+            <iframe id="map"
+                src="https://shorturl.at/gjtKM"
+                width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </section>
+        </section>
+    </main>
     <!--Start of footer-->
     <footer id="footer">
       <ul id="social-links">
