--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <!--Start of main-->
     <main id="main">
-        <div id="picture1"><h1 id="main-title">Interior Design Art</h1></div>
+        <div id="banner"><h1 id="main-title">Interior Design Art</h1></div>
     </main>
     <!--Start of footer-->
     <footer id="footer">
