form on contact page is starting to take its shape in the html - needs styling

--- a/contact.html
+++ b/contact.html
@@ -27,9 +27,39 @@
     <!--Start of main-->
     <main id="main">
         <section ID="main-contact-section"></section>
-          <section>
-            <h1>Contact Us</h1>
-          </section>
+    <!--start of form-->
+      <div>
+        <form action="">
+            <div class="">
+                <label for="subject" class="">Subject</label>
+                <br>
+                <input id="subject" type="text" name="subject" placeholder="Subject" required>
+            </div>
+
+            <div class="">
+                <label for="first-name" class="">First Name</label>
+                <br>
+                <input id="first-name" type="text" name="first name" placeholder="First Name" required>
+            </div>
+
+            <div class="">
+                <label for="last-name" class="">Last Name</label>
+                <br>
+                <input id="last-name" type="text" name="last name" placeholder="Last Name" required>
+            </div>
+
+            <div class="">
+                <label for="email" class="block-label">Your Email</label>
+                <br>
+                <input id="email" type="email" name="email" placeholder="Your email" required>
+            </div>
+
+            <label for="text-input" class="">What do you need help with to style?</label>
+            <br>
+            <textarea id="text-input" rows="4" cols="87" name="feedback" required></textarea>
+        </form>
+      </div>
+    <!--google maps-->
           <section id="googlemaps">
             <iframe id="map"
                 src="https://shorturl.at/gjtKM"
