--- a/contact.html
+++ b/contact.html
@@ -81,9 +81,16 @@
           <br />
           <textarea name="" id="text-input" cols="30" rows="10"></textarea>
           <br />
-          <input type="submit" class="block-label" value="Send" />
+          <input type="submit" class="submit-button" value="Send" />
         </div>
       </form>
+
+      <section>
+        <div id="address">
+            <h3>Our Address</h3>
+            <p>Drottninggatan 10 11151 Stockholm, Sweden</p>
+        </div>
+      </section>
     </main>
     <!--Start of footer-->
     <footer id="footer">
