readme.md updated

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     </header>
     <!--Start of main-->
     <main id="main">
-      <form action="" id="form">
+      <form action="" id="contact-sections">
         <div id="form-div">
           <div class="">
             <label for="subject" class="">Subject</label>
@@ -85,10 +85,16 @@
         </div>
       </form>
 
-      <section>
+      <section id="contact-sections">
         <div id="address">
             <h3>Our Address</h3>
             <p>Drottninggatan 10 11151 Stockholm, Sweden</p>
+        </div>
+        <br>
+        <div id="emailphone">
+            <h3>Contact us trough email or phone</h3>
+            <p>Call us: 08-123 45 67</p>
+            <p>Email us: contact@idart.com</p>
         </div>
       </section>
     </main>
