iframe added again and it has the right styling now

--- a/contact.html
+++ b/contact.html
@@ -87,15 +87,22 @@
 
       <section id="contact-sections">
         <div id="address">
-            <h3>Our Address</h3>
-            <p>Drottninggatan 10 11151 Stockholm, Sweden</p>
+          <h3>Our Address</h3>
+          <p>Drottninggatan 10 11151 Stockholm, Sweden</p>
         </div>
-        <br>
+        <br />
         <div id="emailphone">
-            <h3>Contact us trough email or phone</h3>
-            <p>Call us: 08-123 45 67</p>
-            <p>Email us: contact@idart.com</p>
+          <h3>Contact us trough email or phone</h3>
+          <p>Call us: 08-123 45 67</p>
+          <p>Email us: contact@idart.com</p>
         </div>
+      </section>
+      <section id="googlemaps">
+        <iframe
+          id="map"
+          src="https://shorturl.at/gjtKM"
+          loading="lazy"
+        ></iframe>
       </section>
     </main>
     <!--Start of footer-->
