--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
 
           <label for="text-input" class="">How can we help you?</label>
           <br />
-          <textarea name="" id="text-input" cols="30" rows="10"></textarea>
+          <textarea name="" id="text-input" cols="25" rows="10"></textarea>
           <br />
           <input type="submit" class="submit-button" value="Send" />
         </div>
@@ -100,7 +100,7 @@
       <section id="googlemaps">
         <iframe
           id="map"
-          src="https://shorturl.at/gjtKM"
+          src="https://shorturl.at/asE37"
           loading="lazy"
         ></iframe>
       </section>
