--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       </a>
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
       <label for="nav-toggle" class="nav-toggle-label"
-        ><i class="fa-solid fa-ellipsis-vertical"></i></label>
+        ><i class="fa-solid fa-ellipsis-vertical"></i
+      ></label>
       <nav>
         <ul id="menu">
           <li><a href="index.html" class="active">Home</a></li>
@@ -26,7 +27,15 @@
     </header>
     <!--Start of main-->
     <main id="main">
+      <section>
         <div id="banner"><h1 id="main-title">Interior Design Art</h1></div>
+      </section>
+
+      <section>
+        <div id="idart1"></div>
+        <div id="idart2"></div>
+        <div id="idart3"></div>
+      </section>
     </main>
     <!--Start of footer-->
     <footer id="footer">
