background picture added to the index-html (homepage) and a short h5 text about the company slogan

--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
       </section>
 
       <section>
-        <div id="idart1"></div>
+        <div id="idart1">
+            <div id="idart1div">
+                <h5>"Crafting Sustainable Elegance: Where Design Meets Eco-Conscious Luxury." - ID Art</h5>
+            </div>
+        </div>
         <div id="idart2"></div>
-        <div id="idart3"></div>
+        <div id="idart3">
+            
+        </div>
       </section>
     </main>
     <!--Start of footer-->
