icons added to the three divs in the home page. Divs has been styled and flexbox hs been added aswell

--- a/index.html
+++ b/index.html
@@ -33,13 +33,29 @@
 
       <section>
         <div id="idart1">
-            <div id="idart1div">
-                <h5>"Crafting Sustainable Elegance: Where Design Meets Eco-Conscious Luxury." - ID Art</h5>
-            </div>
+          <div id="idart1div">
+            <h5>
+              "Crafting Sustainable Elegance: Where Design Meets Eco-Conscious
+              Luxury." - ID Art
+            </h5>
+          </div>
         </div>
         <div id="idart2"></div>
         <div id="idart3">
-            
+          <div id="companybenefits">
+            <div id="benefit1">
+                <i class="fa-solid fa-leaf"></i>
+              <h5></h5>
+            </div>
+            <div id="benefit2">
+                <i class="fa-solid fa-check"></i>
+              <h5></h5>
+            </div>
+            <div id="benefit3">
+                <i class="fa-solid fa-calendar-days"></i>
+              <h5></h5>
+            </div>
+          </div>
         </div>
       </section>
     </main>
