homepage divs stylyed

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
           <div id="companybenefits">
             <div id="benefit1">
                 <i class="fa-solid fa-leaf"></i>
-              <h5></h5>
+                <h5 id="eco">Eco Friendly</h5>
             </div>
             <div id="benefit2">
                 <i class="fa-solid fa-check"></i>
-              <h5></h5>
+                 <h5 id="review">9,5/10 Reviews</h5>
             </div>
             <div id="benefit3">
                 <i class="fa-solid fa-calendar-days"></i>
-              <h5></h5>
+                <h5 id="flexible">Flexible Schedule</h5>
             </div>
           </div>
         </div>
