photos added to the references page and styling added to the images

--- a/references.html
+++ b/references.html
@@ -13,8 +13,10 @@
       <a id="anchor-logo" href="index.html">
         <h1 id="logo">ID ART</h1>
       </a>
-    <input type="checkbox" id="nav-toggle" name="nav-toggle" />
-    <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-ellipsis-vertical"></i></label>
+      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
+      <label for="nav-toggle" class="nav-toggle-label"
+        ><i class="fa-solid fa-ellipsis-vertical"></i
+      ></label>
       <nav>
         <ul id="menu">
           <li><a href="index.html">Home</a></li>
@@ -24,7 +26,69 @@
       </nav>
     </header>
     <!--Start of main-->
-    <main id="main"></main>
+    <main id="main">
+      <section id="reference-projects">
+        <h2 class="hidden">References</h2>
+        <div id="reference-images">
+          <img
+            src="assets/images/interior/bruno-cervera-8AYFUTzmyMg-unsplash.jpg"
+            alt="Aestetic interior picture of a chair"
+          />
+          <img
+            src="assets/images/interior/syuhei-inoue-Ci5l9fZwtNw-unsplash.jpg"
+            alt="Picture where the curtains are down and sun shines through the curtains on a wall"
+          />
+          <img
+            src="assets/images/interior/collov-home-design-H-1j_s0dhCw-unsplash.jpg"
+            alt="inside of a living room with three sofas and two windows"
+          />
+          <img
+            src="assets/images/interior/denys-striyeshyn-Rj1eIzAypmg-unsplash.jpg"
+            alt="A home-office with a leather-chair"
+          />
+          <img
+            src="assets/images/interior/hutomo-abrianto-X5BWooeO4Cw-unsplash.jpg"
+            alt="A chair, a lamp and a table with some green plants"
+          />
+          <img
+            src="assets/images/interior/jean-philippe-delberghe-xrjusFfOksI-unsplash.jpg"
+            alt="A lounge with three lamps and three sets of furniture"
+          />
+          <img
+            src="assets/images/interior/jean-philippe-delberghe-yo5hCvbFUJI-unsplash.jpg"
+            alt="Three lamps hanging from the ceiling, a table and a fireplace that is not lit up"
+          />
+          <img
+            src="assets/images/interior/joshua-hanson-fyTd7SzPxOo-unsplash.jpg"
+            alt="An old hallway"
+          />
+          <img
+            src="assets/images/interior/kam-idris-hYb7kbu4x7E-unsplash.jpg"
+            alt="A modern kitchen with different colors on the interior choises"
+          />
+          <img
+            src="assets/images/interior/lauren-mancke-DpphPG9ENsI-unsplash.jpg"
+            alt="A plant"
+          />
+          <img
+            src="assets/images/interior/linh-le-FYgnwFMZBM0-unsplash (1).jpg"
+            alt="A plant and a pot together with a smaller plant in the background"
+          />
+          <img
+            src="assets/images/interior/spacejoy-c0JoR_-2x3E-unsplash.jpg"
+            alt="A living-room with sofas and mirrors on the wall"
+          />
+          <img
+            src="assets/images/interior/spacejoy-io5Tvjh7vCc-unsplash.jpg"
+            alt="A kitchen-table and a living-room"
+          />
+          <img
+            src="assets/images/interior/spacejoy-RUvW1KGD9a4-unsplash (1).jpg"
+            alt="A bedroom"
+          />
+        </div>
+      </section>
+    </main>
     <!--Start of footer-->
     <footer id="footer">
       <ul id="social-links">
