brief description added to meta in head and keywords added aswell

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interior Design Art</title>
     <link rel="stylesheet" href="assets/css/style.css" />
+        <meta name="description"
+            content="Crafting Sustainable Elegance: Where Design Meets Eco-Conscious
+              Luxury"/>
+        <meta name="keywords" content="interior, design, art, stylist,"/>
   </head>
   <body>
     <!--Start of header-->
