--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
             content="Crafting Sustainable Elegance: Where Design Meets Eco-Conscious
               Luxury"/>
         <meta name="keywords" content="interior, design, art, stylist,"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+
   </head>
   <body>
     <!--Start of header-->
