--- a/references.html
+++ b/references.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interior Design Art</title>
     <link rel="stylesheet" href="assets/css/style.css" />
-  </head>
+    <meta name="description" content="Crafting Sustainable Elegance: Where Design Meets Eco-Conscious
+              Luxury" />
+    <meta name="keywords" content="interior, design, art, stylist," />
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+
+</head>
   <body>
     <!--Start of header-->
     <header id="header">
