form action and method are added and the form works

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
     </header>
     <!--Start of main-->
     <main id="main">
-      <form action="" id="contact-sections">
+      <form action="https://formdump.codeinstitute.net" id="contact-sections" method="POST">
         <div id="form-div">
           <div class="">
             <label for="subject" class="">Subject</label>
