minor changes to the contact address and phone-number

--- a/contact.html
+++ b/contact.html
@@ -96,12 +96,12 @@
       <section id="contact-sections">
         <div id="address">
           <h3>Our Address</h3>
-          <p>Drottninggatan 10 11151 Stockholm, Sweden</p>
+          <p>Drottninggatan 10, 11151 Stockholm, Sweden</p>
         </div>
         <br />
         <div id="emailphone">
           <h3>Contact us trough email or phone</h3>
-          <p>Call us: 08-123 45 67</p>
+          <p>Call us: 08 123 45 67</p>
           <p>Email us: contact@idart.com</p>
         </div>
       </section>
